[package]
name = "tiny-secp256k1-wasm"
version = "0.1.0"
description = "A rust library for building WASM JS for tiny-secp256k1"
authors = ["junderw <junderwood@bitcoinbank.co.jp>", "yuki-js <20838151+yuki-js@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/junderw/tiny-secp256k1-wasm"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.2", optional = true }
secp256k1 = { git = "https://github.com/junderw/rust-secp256k1", rev = "e657814" }
secp256k1-sys = { git = "https://github.com/junderw/rust-secp256k1", rev = "e657814" }
js-sys = "0.3.40"
lazy_static = "1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
