[package]
name = "secp256k1"
version = "0.0.0"
authors = []
edition = "2018"
description = "A Rust library for building tiny-secp256k1 Node.js bindings / WASM"
license = "MIT"
publish = false

[dependencies]
getrandom = "0.2.2"
js-sys = { version = "0.3.48", optional = true }
secp256k1-sys = "0.4.0"
wasm-bindgen = { version = "0.2.71", optional = true }

[features]
wasm = ["getrandom/js", "js-sys", "wasm-bindgen"]
